# modal-claude-agent-sdk-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
examples/: budget_control.py  cloud_region.py  custom_image.py  custom_tools.py  ephemeral_volume_upload.py  extended_thinking.py  gpu_compute.py  hooks.py  hooks_monitoring.py  hooks_security.py  host_modal_functions_as_tools.py  host_tools.py  modal_compute_functions.py  model_selection.py  multi_agent.py  multi_turn.py  multi_turn_snapshots.py  network_file_system.py  persistent_storage.py  programmatic_subagents.py  quick_start.py  resource_limits.py  sandbox_snapshot.py  security_sandbox.py  session_resume.py  structured_output.py  tunnel_web_app.py
src/modal_agents_sdk/: __init__.py  _client.py  _constants.py  _errors.py  _host_hooks.py  _host_tools.py  _image.py  _options.py  _query.py  _sandbox.py  _types.py  _utils.py
tests/: __init__.py  conftest.py  test_client.py  test_errors.py  test_hooks.py  test_host_tools.py  test_image.py  test_options.py  test_query.py
