[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modal-agents-sdk"
version = "0.1.0"
description = "Run Claude Agent SDK agents in Modal sandboxes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shrivu Shankar", email = "shrivu1122@gmail.com" },
]
keywords = [
    "ai",
    "agent",
    "anthropic",
    "claude",
    "modal",
    "sandbox",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "modal>=1.3.0",
    "anyio>=4.12.0",
    "claude-agent-sdk>=0.1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/sshh12/modal-claude-agent-sdk-python"
Documentation = "https://github.com/sshh12/modal-claude-agent-sdk-python#readme"
Repository = "https://github.com/sshh12/modal-claude-agent-sdk-python"
Issues = "https://github.com/sshh12/modal-claude-agent-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/modal_agents_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF022", # __all__ not sorted (we prefer categorized)
]

[tool.ruff.lint.isort]
known-first-party = ["modal_agents_sdk"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
